--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name:  checkout of repository code
         uses:  actions/checkout@v3
-      - run:  echo "$(cat hello_word.txt)"
+      - run:  echo "$(cat hello_world.txt)"
       
   
   
