--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on:  ubuntu-latest
     steps:
       - name: Source code checkout
-        uses: actions/checkout@V2
+        uses: actions/checkout@v2
       - name: Setup Node.js
         id: setup-node
         uses: actions/setup-node@v4
@@ -16,6 +16,6 @@ jobs:
           node-version-file: .node-version
           cache: npm
       - run: npm install
-      - run: npm run build
+      - run: npm run build 
       
       
