--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -13,7 +13,7 @@ jobs:
         id: setup-node
         uses: actions/setup-node@v4
         with:
-          node-version-file: .node-version
+          node-version: 18
           cache: npm
       - run: npm install
       - run: npm run build 
