--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -17,5 +17,20 @@ jobs:
           cache: npm
       - run: npm install
       - run: npm run build 
+  
+  test:
+    needs:  build-test-deploy
+    runs-on:  ubuntu-latest
+    steps:
+      - name: Source code checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        id: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: npm
+      - run: npm install
+      - run: npm run test 
       
       
