--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -24,12 +24,10 @@ jobs:
     steps:
       - name: Source code checkout
         uses: actions/checkout@v2
-      - name: Setup Node.js
-        id: setup-node
-        uses: actions/setup-node@v4
+      - name: use node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: npm
+          node-version: '18.x'
       - run: npm install
       - run: npm run test 
       
