--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -24,11 +24,14 @@ jobs:
     steps:
       - name: Source code checkout
         uses: actions/checkout@v2
-      - name: use node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        id: setup-node
+        uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
-      - run: npm install
-      - run: npm run test 
-      
+          node-version: 18
+          cache: npm
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
       
