--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -22,5 +22,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      - run: npm install
+      - run: npm install --save-dev eslint eslint-config-next
       - run: npm test
