--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -18,9 +18,9 @@ jobs:
     steps: 
       - name: checkout repo
         uses: actions/checkout@v3
-      - name: use node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '20.x'
       - run: npm install --save-dev eslint eslint-config-next
       - run: npm test
