--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "test": "next lint"
   },
   "dependencies": {
-    "next": "14.2.21",
+    "next": "^14.2.30",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.4"
   }
 }
