--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": "next",
   "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "double"]
+    "quotes": "off",
+    "semi": "off"
   }
 }
+
