--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
   "extends": "next",
   "rules": {
     "quotes": "off",
-    "semi": "off"
+    "semi": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
+
 
