--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -1,26 +1,36 @@
-name: build-test-deploy
-on: push
-jobs: 
-  build:
-    runs-on: ubuntu-latest
-    steps: 
-      - name: checkout repo
-        uses: actions/checkout@v3
-      - name: use node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-      - run: npm install
-      - run: npm run build
-  test: 
-    needs: build
-    runs-on: ubuntu-latest
-    steps: 
-      - name: checkout repo
-        uses: actions/checkout@v3
-      - name: Setup Node
+name: CICD
+on: 
+  push:
+    branches:
+      - dev
+jobs:
+  build-test-deploy:
+    runs-on:  ubuntu-latest
+    steps:
+      - name: Source code checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        id: setup-node
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-      - run: npm install 
-      - run: npm test
+          node-version: 18
+          cache: npm
+      - run: npm install
+      - run: npm run build 
+  
+  test:
+    needs:  build-test-deploy
+    runs-on:  ubuntu-latest
+    steps:
+      - name: Source code checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        id: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: npm
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
