--- a/.github/workflows/npm-build-test=deploy.yml
+++ b/.github/workflows/npm-build-test=deploy.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '18.x'
       - run: npm install
-      - run: npm  
+      - run: npm test
  
   deploy:
     needs: test
