--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -1,21 +1,68 @@
-name: CICD
-on: 
-  push:
-    branches:
-      - dev
-jobs:
-  build-test-deploy:
-    runs-on:  ubuntu-latest
-    steps:
-      - name: Source code checkout
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        id: setup-node
-        uses: actions/setup-node@v4
+name: build-test-deploy
+on: push
+jobs: 
+  build:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: use node.js
+        uses: actions/setup-node@v3
         with:
-          node-version-file: .node-version
-          cache: npm
+          node-version: '18.x'
       - run: npm install
-      - run: npm run build 
+      - run: npm run build
+  test: 
+    needs: build
+    runs-on: ubuntu-latest
+    steps: 
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: use node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      - run: npm install
+      - run: npm test
+ 
+  deploy:
+    needs: test
+
+    permissions:
+      contents: write
+      pages: write     
+      id-token: write  
+
+    environment:
+      name: production
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.MY_SECRET_TOKEN }}
+
+      - name: use node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
       
-      
+      - name: configure github pages
+        uses: actions/configure-pages@v3
+        with:
+          static_site_generator: next
+
+      - run: npm install
+      - run: npm run build
+
+      - name: upload artifacts
+        uses: actions/upload-artifact@v4
+        with: 
+          path: "./out"
+
+      - name: deploy
+        id: deployment
+        uses: actions/deploy-pages@v2
