--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -65,4 +65,4 @@ jobs:
 
       - name: deploy
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/upload-pages-artifact@v2
