--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -62,6 +62,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with: 
           path: "./out"
+          
+      - name: List directory contents
+        run: ls -la
 
       - name: deploy
         id: deployment
