--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -61,7 +61,7 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v4
         with: 
-          path: "./out"
+          path: out
           
       - name: List directory contents
         run: ls -la
