--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -69,4 +69,6 @@ jobs:
       - name: deploy
         id: deployment
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: out
 
