--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -6,8 +6,6 @@ on:
   #   - cron: '*/1 * * * *'
   push:
 
-concurrency:
-
 env:
   CONTAINER_REGISTRY: docker.io
   IMAGE_NAME: github-actions-nginx
@@ -17,13 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Docker Build
-        run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/\${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+        run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
 
       - name: Docker Login
-        run: echo docker login --username=\${{ vars.DOCKER_USERNAME }} --password=\${{ secrets.DOCKER_PASSWORD }}
+        run: echo docker login --username=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker Publish
-        run: echo docker push $CONTAINER_REGISTRY/\${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+        run: echo docker push ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+
   deploy:
     needs: docker
     concurrency:
@@ -33,4 +32,4 @@ jobs:
     steps:
       - name: Docker Run
         run: |
-          echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          echo docker run -d -p 8080:80 ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
