--- a/.github/workflows/matrix-example.yml
+++ b/.github/workflows/matrix-example.yml
@@ -1,9 +1,6 @@
-name: Exploring Variables and Secrets
-
+name: exploring matirx configuration
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: '*/1 * * * *'
   push:
 
 env:
@@ -12,28 +9,14 @@ env:
 
 jobs:
   docker:
-    runs-on: [ubuntu-latest, windows-latest]
-    steps:
-      - name: Docker Build
-        run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-
-      - name: Docker Login
-        run: echo docker login --username=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Docker Publish
-        run: echo docker push ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-
-  deploy:
-    needs: docker
-    concurrency:
-      group: production-deployment
-      cancel-in-progress: true
-    runs-on: ubuntu-latest
-    steps:
-      - name: Docker Run
-        run: |
-
-          echo docker run -d -p 8080:80 ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          sleep 600s
-
-  
+    strategy:
+       matrix:
+        os: [ubuntu-latest,ubuntu-20.04,windows-latest] 
+        image: [hello-world, alpine]
+    runs-on: ${{ matrix.os }}
+    steps: 
+      - name: Echo Docker Info
+        run: docker info
+      - name: Run Docker Image on ${{ matrix.os }}
+        run: docker run ${{ matrix.image }}
+     
