--- a/.github/workflows/matrix-example.yml
+++ b/.github/workflows/matrix-example.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   docker:
     strategy:
+       fail-fast: false
+       max-parallel: 2
        matrix:
         os: [ubuntu-latest,ubuntu-20.04,windows-latest] 
         image: [hello-world, alpine]
